# lymphhub

./: .gitignore  CONFIGURATION.md  README.md  deploy_and_verify.sh  docker-compose.yml  sample
backend/: main.py  requirements.txt
config/authelia/: configuration.yml
config/caddy/: Caddyfile
config/headscale/: config.yaml
config/traefik/: acme.json  traefik.yml
config/traefik/dynamic/: cicd.yml  registry.yml
data/authelia/config/: configuration.yml.example  users_database.yml.example
data/caddy/: Dockerfile.caddy
docs/: TEMPORAL_KEYCLOAK_SETUP.md
frontend/: Dockerfile
frontend/app/: globals.css  page.tsx
headscale/: config.yaml
infrastructure/: .env.example  docker-compose.yaml
keycloak/: docker-compose.yml
middle/keycloak-sdk/: README.md  pyproject.toml
middle/keycloak-sdk/scripts/: setup_temporal_keycloak.py  test_temporal_oidc.py
middle/keycloak-sdk/src/keycloak_sdk/: __init__.py  client.py  config.py
middle/keycloak-sdk/src/keycloak_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
